Create resources for create, update and delete skills and document with swagger
